styled form's select

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                     <div class="input-container flex flex-col">
                         <label for>How Did You Hear About Us? (Optional)</label>
                         <div class="input-container-item">
-                            <div class="select-outer-wrapper flex flex-wrap">
+                            <div class="select-outer-wrapper flex flex-col">
                                 <div class="select-inner-wrapper flex">
                                     <select name="select-ref" id="select-ref">
-                                        <option disabled selected id="click">Click To Select</option>
+                                        <option selected disabled>Click To Select</option>
                                         <option value="fb">Facebook</option>
                                         <option value="tw">Twitter</option>
                                         <option value="inst">Instagram</option>
@@ -61,7 +61,6 @@
                                     </select>
                                 </div>
                             </div>
-                            <input name="referralsource" type="hidden" value>
                         </div>
                     </div>
                     <div class="button-container flex">
